--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -28,7 +28,7 @@
     <script type="module" src="/src/main.jsx"></script>
     <!-- Java Script
     ================================================== -->
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/plugins.js"></script>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
